================
 Change History
================

3.9.8 (2011-04-18)
==================

Bugs Fixed
----------

- "activity monitor not updated for subconnections when connection
  returned to pool"

  https://bugs.launchpad.net/zodb/+bug/737198


3.9.7 (2010-09-28)
==================

Bugs Fixed
----------

- Changes in way that garbage collection treats dictionaries in Python
  2.7 broke the object/connection cache implementation.
  (https://bugs.launchpad.net/zodb/+bug/641481)

  Python 2.7 wasn't officially supported, but we were releasing
  binaries for it, so ...

- Logrotation/repoening via a SIGUSR2 signal wasn't implemented.
  (https://bugs.launchpad.net/zodb/+bug/143600)

- When using multi-databases, cache-management operations on a
  connection, cacheMinimize and cacheGC, weren't applied to
  subconnections.

3.9.6 (2010-09-21)
==================

Bugs Fixed
----------

- Updating blobs in save points could cause spurious "invalidations
  out of order" errors.  https://bugs.launchpad.net/zodb/+bug/509801

  (Thanks to Christian Zagrodnick for chasing this down.)

- If a ZEO client process was restarted while invalidating a ZEO cache
  entry, the cache could be left in a stage when there is data marked
  current that should be invalidated, leading to persistent conflict
  errors.

- Corrupted or invalid cache files prevented ZEO clients from
  starting. Now, bad cache files are moved aside.

- Invalidations of object records in ZEO caches, where the
  invalidation transaction ids matched the cached transaction ids
  should have been ignored.

- Shutting down a process while committing a transaction or processing
  invalidations from the server could cause ZEO persistent client
  caches to have invalid data.  This, in turn caused stale data to
  remain in the cache until it was updated.

- Conflict errors didn't invalidate ZEO cache entries.

- When objects were added in savepoints and either the savepoint was